<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.calendar.MainActivity">

    <Button
        android:id="@+id/m_query_calendar_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Query"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/m_insert_calendar_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Insert"
        app:layout_constraintLeft_toRightOf="@+id/m_query_calendar_bt" />

    <Button
        android:id="@+id/m_demo_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Demo"
        app:layout_constraintLeft_toRightOf="@+id/m_insert_calendar_bt" />

    <Spinner
        android:id="@+id/m_chose_sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/choses"
        app:layout_constraintBottom_toBottomOf="@+id/m_insert_calendar_bt"
        app:layout_constraintLeft_toRightOf="@+id/m_insert_calendar_bt"
        app:layout_constraintTop_toTopOf="@+id/m_insert_calendar_bt" />

    <ListView
        android:id="@+id/m_data_rl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_query_calendar_bt" />

    <!--<android.support.constraint.Guideline-->
    <!--android:id="@+id/guideLine"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical"-->
    <!--app:layout_constraintGuide_percent="0.5" />-->

    <!--<TimePicker-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintDimensionRatio="h,15:20"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

</android.support.constraint.ConstraintLayout>
